--- a/pages/barbershop.html
+++ b/pages/barbershop.html
@@ -17,13 +17,69 @@
 </head>
 <body>
     <!-- Navbar -->
-
+    <nav class="family-nav">
+        <ul>
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="./foundation.html">Trends Cares Foundation</a></li>
+            <li><a href="./barbershop.html">Trends GMC Barbershop</a></li>
+            <li><a href="./clothing.html">Trends Inc & Company</a></li>
+        </ul>
+    </nav>
     <!-- Header -->
+    <header id="family-header">
+        <div class="title">
+            <h3>Trends GMC Barbershop</h3>
+        </div> 
+    </header>
 
     <!-- About -->
+    <section id="about-family">
+        <h3>About Trends GMC Barbershop</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima obcaecati ut, adipisci harum quibusdam
+            facilis commodi numquam expedita debitis sunt voluptatem optio culpa neque totam esse quisquam nisi odit
+            deleniti.</p>
+    </section>
 
     <!-- Booking -->
-
+    <section id="booking">
+        <h3>Quick Book</h3>
+        <form action="" >
+            <input type="text" placeholder="Name...">
+            <input type="tel" placeholder="Number...">
+            <input type="date" placeholder="Time...">
+            <label for="cuts">Choose a Cut:</label>
+            <select id="cuts" name="cuts">
+              <option value="cut">Hair Cut</option>
+              <option value="yCut">Kids Cut 10 & Under</option>
+              <option value="sCut">Cut & Shave</option>
+              <option value="gmc">The GMC</option>
+            </select>
+            <button type="submit">Request Time</button>
+        </form>
+    </section>
+    
     <!-- Footer -->
+    <footer id="legal">
+        <p>Trends&trade; Inc. and it's affiliated companies are a registered trademark of the the Trends&trade; brand.
+            <br>&copy;2021 All rights reserved
+            <br>
+            <br>Website Proudly Crafted by Design House eMans&copy;
+            <br>
+        </p>
+
+        <ul class="socials">
+            <li><a href=""><img src="../assets/instagram.png" alt="instagram"></a></li>
+            <li><a href=""><img src="../assets/twitter.png" alt="twitter"></a></li>
+            <li><a href=""><img src="../assets/facebook.png" alt="facebook"></a></li>
+        </ul>
+
+        <p class="attribution">Images and Icons By: <br>
+            <a href="https://www.flaticon.com/free-icons/news-feed" title="news feed icons">Mayor Icons -
+                Flaticon</a><br><a href="https://www.flaticon.com/free-icons/directory"
+                title="directory icons">Elastic1 - Flaticon</a><br><a
+                href="https://www.flaticon.com/free-icons/" title="instagram icons">Freepik -
+                Flaticon</a></p>
+
+    </footer>
 </body>
 </html>
