--- a/pages/clothing.html
+++ b/pages/clothing.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,15 +16,79 @@
     <!-- Favicon -->
     <link rel="icon" href="../assets/favicon.ico">
 </head>
+
 <body>
     <!-- Navbar -->
-        
+    <nav class="family-nav">
+        <ul>
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="./foundation.html">Trends Cares Foundation</a></li>
+            <li><a href="./barbershop.html">Trends GMC Barbershop</a></li>
+            <li><a href="./clothing.html">Trends Inc & Company</a></li>
+        </ul>
+    </nav>
     <!-- Header -->
-
+    <header id="family-header">
+        <div class="title">
+            <h3>Trends Inc & Company</h3>
+        </div>
+    </header>
     <!-- About -->
+    <section id="about-family">
+        <h3>About Trends Inc. & Company</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima obcaecati ut, adipisci harum quibusdam
+            facilis commodi numquam expedita debitis sunt voluptatem optio culpa neque totam esse quisquam nisi odit
+            deleniti.</p>
+    </section>
 
     <!-- Shop -->
-
+    <section id="shop">
+        <h3>Featured Products</h3>
+        <div class="feature-cards flex">
+            <div>
+                <img src="#" alt="Featured Product 1" class="card">
+                <a href="#">Featured Product 1</a>
+                <button type="button">Learn More</button>
+                <button type="button">Add to Cart</button>
+            </div>
+            <div>
+                <img src="#" alt="Featured Product 2" class="card">
+                <a href="#">Featured Product 2</a>
+                <button type="button">Learn More</button>
+                <button type="button">Add to Cart</button>
+            </div>
+            <div>
+                <img src="#" alt="Featured Product 3" class="card">
+                <a href="#">Featured Product 3</a>
+                <button type="button">Learn More</button>
+                <button type="button">Add to Cart</button>
+            </div>
+        </div>
+        <button><a href="">All Products</a></button>
+    </section>
+    
     <!-- Footer -->
+    <footer id="legal">
+        <p>Trends&trade; Inc. and it's affiliated companies are a registered trademark of the the Trends&trade; brand.
+            <br>&copy;2021 All rights reserved
+            <br>
+            <br>Website Proudly Crafted by Design House eMans&copy;
+            <br>
+        </p>
+
+        <ul class="socials">
+            <li><a href=""><img src="../assets/instagram.png" alt="instagram"></a></li>
+            <li><a href=""><img src="../assets/twitter.png" alt="twitter"></a></li>
+            <li><a href=""><img src="../assets/facebook.png" alt="facebook"></a></li>
+        </ul>
+
+        <p class="attribution">Images and Icons By: <br>
+            <a href="https://www.flaticon.com/free-icons/news-feed" title="news feed icons">Mayor Icons -
+                Flaticon</a><br><a href="https://www.flaticon.com/free-icons/directory" title="directory icons">Elastic1
+                - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/" title="instagram icons">Freepik -
+                Flaticon</a></p>
+
+    </footer>
 </body>
+
 </html>
