--- a/pages/foundation.html
+++ b/pages/foundation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,21 +10,91 @@
     <!-- CSS Styling  -->
     <link rel="stylesheet" href="../styles/styles.css">
 
-     <!-- Alpine JS CDN -->
-     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <!-- Alpine JS CDN -->
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-     <!-- Favicon -->
+    <!-- Favicon -->
     <link rel="icon" href="../assets/favicon.ico">
 </head>
+
 <body>
     <!-- Navbar -->
-
+    <nav class="family-nav">
+        <ul>
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="./foundation.html">Trends Cares Foundation</a></li>
+            <li><a href="./barbershop.html">Trends GMC Barbershop</a></li>
+            <li><a href="./clothing.html">Trends Inc & Company</a></li>
+        </ul>
+    </nav>
     <!-- Header -->
+    <header id="family-header">
+        <div class="title">
+            <h3>Trends Cares Foundation</h3>
+        </div>
+    </header>
 
     <!-- About -->
+    <section id="about-family">
+        <h3>About Trends Cares Foundation</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima obcaecati ut, adipisci harum quibusdam
+            facilis commodi numquam expedita debitis sunt voluptatem optio culpa neque totam esse quisquam nisi odit
+            deleniti.</p>
+    </section>
+
+    <!-- Testimonials -->
+    <section class="testimony">
+        <h3>Testimonies</h3>
+        <div class="feature-cards flex">
+            <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <p>- USER</p>
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <p>- USER</p>
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <p>- USER</p>
+            </div>
+        </div>
+    </section>
 
     <!-- Donate -->
-
+    <section id="donate">
+        <h3>How to Join</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis a deleniti debitis nulla ratione quo!
+            Laudantium ipsum consectetur, obcaecati velit molestiae dolores quisquam harum debitis assumenda architecto
+            praesentium, illo nobis!</p>
+        <div class="donate-links">
+            <button type="button">Join</button>
+            <button type="button">Give</button>
+        </div>
+    </section>
+    
     <!-- Footer -->
+    <footer id="legal">
+        <p>Trends&trade; Inc. and it's affiliated companies are a registered trademark of the the Trends&trade; brand.
+            <br>&copy;2021 All rights reserved
+            <br>
+            <br>Website Proudly Crafted by Design House eMans&copy;
+            <br>
+        </p>
+
+        <ul class="socials">
+            <li><a href=""><img src="../assets/instagram.png" alt="instagram"></a></li>
+            <li><a href=""><img src="../assets/twitter.png" alt="twitter"></a></li>
+            <li><a href=""><img src="../assets/facebook.png" alt="facebook"></a></li>
+        </ul>
+
+        <p class="attribution">Images and Icons By: <br>
+            <a href="https://www.flaticon.com/free-icons/news-feed" title="news feed icons">Mayor Icons -
+                Flaticon</a><br><a href="https://www.flaticon.com/free-icons/directory" title="directory icons">Elastic1
+                - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/" title="instagram icons">Freepik -
+                Flaticon</a></p>
+
+    </footer>
 </body>
+
 </html>
