--- a/pages/barbershop.html
+++ b/pages/barbershop.html
@@ -19,10 +19,10 @@
     <!-- Navbar -->
     <nav class="family-nav">
         <ul>
-            <li><a href="../index.html">HOME</a></li>
-            <li><a href="./foundation.html">Trends Cares Foundation</a></li>
-            <li><a href="./barbershop.html">Trends GMC Barbershop</a></li>
-            <li><a href="./clothing.html">Trends Inc & Company</a></li>
+            <li><a href="../index.html"><img src="../assets/home.png" alt="Home"></a></li>
+            <li><a href="./foundation.html"><img src="../assets/heart.png" alt="Trends Care Foundation"></a></li>
+            <li><a href="./barbershop.html"><img src="../assets/barber-shop.png" alt="Trends GMC Barbershop"></a></li>
+            <li><a href="./clothing.html"><img src="../assets/shopping-bag.png" alt="Trends Inc & Company"></a></li>
         </ul>
     </nav>
     <!-- Header -->
