--- a/pages/clothing.html
+++ b/pages/clothing.html
@@ -21,18 +21,20 @@
     <!-- Navbar -->
     <nav class="family-nav">
         <ul>
-            <li><a href="../index.html">HOME</a></li>
-            <li><a href="./foundation.html">Trends Cares Foundation</a></li>
-            <li><a href="./barbershop.html">Trends GMC Barbershop</a></li>
-            <li><a href="./clothing.html">Trends Inc & Company</a></li>
+            <li><a href="../index.html"><img src="../assets/home.png" alt="Home"></a></li>
+            <li><a href="./foundation.html"><img src="../assets/heart.png" alt="Trends Care Foundation"></a></li>
+            <li><a href="./barbershop.html"><img src="../assets/barber-shop.png" alt="Trends GMC Barbershop"></a></li>
+            <li><a href="./clothing.html"><img src="../assets/shopping-bag.png" alt="Trends Inc & Company"></a></li>
         </ul>
     </nav>
+    
     <!-- Header -->
     <header id="family-header">
         <div class="title">
             <h3>Trends Inc & Company</h3>
         </div>
     </header>
+
     <!-- About -->
     <section id="about-family">
         <h3>About Trends Inc. & Company</h3>
@@ -66,7 +68,7 @@
         </div>
         <button><a href="">All Products</a></button>
     </section>
-    
+
     <!-- Footer -->
     <footer id="legal">
         <p>Trends&trade; Inc. and it's affiliated companies are a registered trademark of the the Trends&trade; brand.
