--- a/pages/foundation.html
+++ b/pages/foundation.html
@@ -21,12 +21,13 @@
     <!-- Navbar -->
     <nav class="family-nav">
         <ul>
-            <li><a href="../index.html">HOME</a></li>
-            <li><a href="./foundation.html">Trends Cares Foundation</a></li>
-            <li><a href="./barbershop.html">Trends GMC Barbershop</a></li>
-            <li><a href="./clothing.html">Trends Inc & Company</a></li>
+            <li><a href="../index.html"><img src="../assets/home.png" alt="Home"></a></li>
+            <li><a href="./foundation.html"><img src="../assets/heart.png" alt="Trends Care Foundation"></a></li>
+            <li><a href="./barbershop.html"><img src="../assets/barber-shop.png" alt="Trends GMC Barbershop"></a></li>
+            <li><a href="./clothing.html"><img src="../assets/shopping-bag.png" alt="Trends Inc & Company"></a></li>
         </ul>
     </nav>
+
     <!-- Header -->
     <header id="family-header">
         <div class="title">
@@ -72,7 +73,7 @@
             <button type="button">Give</button>
         </div>
     </section>
-    
+
     <!-- Footer -->
     <footer id="legal">
         <p>Trends&trade; Inc. and it's affiliated companies are a registered trademark of the the Trends&trade; brand.
@@ -91,7 +92,14 @@
         <p class="attribution">Images and Icons By: <br>
             <a href="https://www.flaticon.com/free-icons/news-feed" title="news feed icons">Mayor Icons -
                 Flaticon</a><br><a href="https://www.flaticon.com/free-icons/directory" title="directory icons">Elastic1
-                - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/" title="instagram icons">Freepik -
+                - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/barber-shop"
+                title="barber shop icons">Those Icons - Flaticon</a><br><a
+                href="https://www.flaticon.com/free-icons/user-interface" title="user interface icons">Creatype -
+                Flaticon</a><br><a href="https://www.flaticon.com/free-icons/donation" title="donation icons">Fathema
+                Khanom - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/homepage"
+                title="homepage icons">Uniconlabs - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/"
+                title="instagram icons">Freepik
+                -
                 Flaticon</a></p>
 
     </footer>
