--- a/pages/barbershop.html
+++ b/pages/barbershop.html
@@ -19,8 +19,8 @@
     <!-- Navbar -->
     <nav class="family-nav">
         <ul>
-            <li><a href="../index.html"><img src="../assets/home.png" alt="Home"></a></li>
-            <li><a href="./foundation.html"><img src="../assets/heart.png" alt="Trends Care Foundation"></a></li>
+            <li id="home-tag"><a href="../index.html"><img src="../assets/home.png" alt="Home"></a></li>
+            <li><a href="./foundation.html"><img src="../assets/healthcare.png" alt="Trends Care Foundation"></a></li>
             <li><a href="./barbershop.html"><img src="../assets/barber-shop.png" alt="Trends GMC Barbershop"></a></li>
             <li><a href="./clothing.html"><img src="../assets/shopping-bag.png" alt="Trends Inc & Company"></a></li>
         </ul>
@@ -75,9 +75,12 @@
 
         <p class="attribution">Images and Icons By: <br>
             <a href="https://www.flaticon.com/free-icons/news-feed" title="news feed icons">Mayor Icons -
-                Flaticon</a><br><a href="https://www.flaticon.com/free-icons/directory"
-                title="directory icons">Elastic1 - Flaticon</a><br><a
-                href="https://www.flaticon.com/free-icons/" title="instagram icons">Freepik -
+                Flaticon</a><br><a href="https://www.flaticon.com/free-icons/directory" title="directory icons">Elastic1
+                - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/barber-shop"
+                title="barber shop icons">Those Icons - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/health" title="health icons">iconmas - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/homepage"
+                title="homepage icons">Uniconlabs - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/"
+                title="instagram icons">Freepik
+                -
                 Flaticon</a></p>
 
     </footer>
