--- a/pages/clothing.html
+++ b/pages/clothing.html
@@ -29,7 +29,7 @@
     </nav>
     
     <!-- Header -->
-    <header id="family-header">
+    <header id="family-header" class="store">
         <div class="title">
             <h3>Trends Inc & Company</h3>
         </div>
