--- a/pages/foundation.html
+++ b/pages/foundation.html
@@ -29,7 +29,7 @@
     </nav>
 
     <!-- Header -->
-    <header id="family-header">
+    <header id="family-header" class="foundation">
         <div class="title">
             <h3>Trends Cares Foundation</h3>
         </div>
