--- a/pages/barbershop.html
+++ b/pages/barbershop.html
@@ -25,8 +25,9 @@
             <li><a href="./clothing.html"><img src="../assets/shopping-bag.png" alt="Trends Inc & Company"></a></li>
         </ul>
     </nav>
+
     <!-- Header -->
-    <header id="family-header">
+    <header id="family-header" class="barbershop">
         <div class="title">
             <h3>Trends GMC Barbershop</h3>
         </div> 
