Add CSS styles to foundation
Add styles to testimony cards and donation section

--- a/pages/foundation.html
+++ b/pages/foundation.html
@@ -47,17 +47,27 @@
     <section class="testimony">
         <h3>Testimonies</h3>
         <div class="feature-cards flex">
-            <div>
+            <div class="card-body">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                <p>- USER</p>
             </div>
-            <div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                <p>- USER</p>
+            <div class="card-footer">    
+                <h3>John Smith</h3>
             </div>
-            <div>
+        </div>
+        <div class="feature-cards flex">
+            <div class="card-body">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                <p>- USER</p>
+            </div>
+            <div class="card-footer">    
+                <h3>Jane Doe</h3>
+            </div>
+        </div>
+        <div class="feature-cards flex">
+            <div class="card-body">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="card-footer">    
+                <h3>Mike Gates</h3>
             </div>
         </div>
     </section>
