--- a/assets/pages/foundation.html
+++ b/assets/pages/foundation.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trends Inc & Company</title>
+    <title>Trends Cares Foundation</title>
 
     <!-- CSS Styling  -->
     <link rel="stylesheet" href="../styles/styles.css">
@@ -27,38 +27,60 @@
             <li><a href="./clothing.html"><img src="../assets/shopping-bag.png" alt="Trends Inc & Company"></a></li>
         </ul>
     </nav>
-    
+
     <!-- Header -->
-    <header id="family-header" class="store">
+    <header id="family-header" class="foundation">
         <div class="title">
-            <h3>Trends Inc & Company</h3>
+            <h3>Trends Cares Foundation</h3>
         </div>
     </header>
 
     <!-- About -->
     <section id="about-family">
-        <h3>About Trends Inc. & Company</h3>
+        <h3>About Trends Cares Foundation</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima obcaecati ut, adipisci harum quibusdam
             facilis commodi numquam expedita debitis sunt voluptatem optio culpa neque totam esse quisquam nisi odit
             deleniti.</p>
     </section>
 
-    <!-- Shop -->
-    <section id="shop">
-        <h3>Featured Products</h3>
-        <div class="store-cards flex">
+    <!-- Testimonials -->
+    <section class="testimony">
+        <h3>Testimonies</h3>
+        <div class="feature-cards flex">
             <div class="card-body">
-                <img src="../assets/incncologo.png" alt="Featured Product 1" class="card">
-                <br>
-                <a href="#">KC Hoodie</a>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
             </div>
-            <div class="card-footer" id="store-card">
-                <button type="button">Learn More</button>
-                <button type="button">Add to Cart</button>
+            <div class="card-footer">    
+                <h3>John Smith</h3>
             </div>
         </div>
-        <div id="shop-items">
-            <button><a href="">All Products</a></button>
+        <div class="feature-cards flex">
+            <div class="card-body">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="card-footer">    
+                <h3>Jane Doe</h3>
+            </div>
+        </div>
+        <div class="feature-cards flex">
+            <div class="card-body">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="card-footer">    
+                <h3>Mike Gates</h3>
+            </div>
+        </div>
+    </section>
+
+    <!-- Donate -->
+    <section id="donate">
+        <h3>How to Join</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis a deleniti debitis nulla ratione quo!
+            Laudantium ipsum consectetur, obcaecati velit molestiae dolores quisquam harum debitis assumenda architecto
+            praesentium, illo nobis!</p>
+        <div class="donate-links">
+            <button type="button">Join</button>
+            <button type="button">Give</button>
         </div>
     </section>
 
