--- a/assets/pages/clothing.html
+++ b/assets/pages/clothing.html
@@ -46,20 +46,27 @@
     <!-- Shop -->
     <section id="shop">
         <h3>Featured Products</h3>
-        <div class="store-cards flex">
-            <div class="card-body">
-                <img src="../assets/incncologo.png" alt="Featured Product 1" class="card">
-                <br>
-                <a href="#">KC Hoodie</a>
+        <div class="feature-cards flex">
+            <div>
+                <img src="#" alt="Featured Product 1" class="card">
+                <a href="#">Featured Product 1</a>
+                <button type="button">Learn More</button>
+                <button type="button">Add to Cart</button>
             </div>
-            <div class="card-footer" id="store-card">
+            <div>
+                <img src="#" alt="Featured Product 2" class="card">
+                <a href="#">Featured Product 2</a>
+                <button type="button">Learn More</button>
+                <button type="button">Add to Cart</button>
+            </div>
+            <div>
+                <img src="#" alt="Featured Product 3" class="card">
+                <a href="#">Featured Product 3</a>
                 <button type="button">Learn More</button>
                 <button type="button">Add to Cart</button>
             </div>
         </div>
-        <div id="shop-items">
-            <button><a href="">All Products</a></button>
-        </div>
+        <button><a href="">All Products</a></button>
     </section>
 
     <!-- Footer -->
