Update to add password field

--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
                 <input type="text" placeholder="Username...">
                 <input type="email" placeholder="Email...">
                 <input type="tel" placeholder="Number...">
+                <input type="password" placeholder="Password...">
                 <button class="button">Submit</button>
             </form>
+
+            <p style="margin-top: 10px; font-size: small;">If You Already Have An Account, We Just Need Your Username and Password!</p>
 
         </div>
     </div>
