Establish Newsletter Page

--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -19,13 +19,32 @@
             <li><a href="./clothing.html"><img src="../assets/shopping-bag.png" alt="Trends Inc & Company"></a></li>
         </ul>
     </nav>    
-    
+    <div class="contents">
     <header class="header">
-
+        <h1>Trends Newsletter</h1>
     </header>
+
+    <section class="news">
+        <div class="headline">
+            <h3>Battle of the Talking Heads</h3>
+            <h4>Sunday, July 17, 2022</h4>
+            <h4>Lofty Spaces | 816 Montgomery St. | Dallas, TX</h4>
+        </div>
+        <div class="story">
+            <p>The longest running barber battle in the Midwest is on tour. Come see the best in the game compete on stage
+                + showcases & more!!</p>
+        </div>
+    </section>
+    </div>
 </body>
 </html>
 
 <style>
-    
+    .contents {
+        margin: 2rem;
+    }
+
+    .news {
+        padding-top: 2rem;
+    }
 </style>
