--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <ul class="h-nav">
             <li class="title"><a href="/"><h1>Trends Inc.</h1></a></li>
             <li><a href="#podcast"><img src="assets/voice.png" alt="Talking Heads Podcast"></a></li>
-            <li><a href="/pages/newsletter.html"><img src="assets/rss-feed.png" alt="News Feed"></a></li>
-            <li><a href="/pages/directory.html"><img src="assets/phone-book.png" alt="Directory"></a></li>
+            <li><a href="pages/newsletter.html"><img src="assets/rss-feed.png" alt="News Feed"></a></li>
+            <li><a href="pages/directory.html"><img src="assets/phone-book.png" alt="Directory"></a></li>
         </ul>
     </div>
 
@@ -74,8 +74,8 @@
         </div>
         <div class="about-links">
             <button @click="open = true">Login</button>
-            <button type="button"><a href="/pages/directory.html">Directory</a></button>
-            <button type="button"><a href="/pages/newsletter.html">Newsletter</a></button>
+            <button type="button"><a href="pages/directory.html">Directory</a></button>
+            <button type="button"><a href="pages/newsletter.html">Newsletter</a></button>
         </div>
     </section>
 
