--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trends Inc&trade;</title>
 
-    <!-- CSS Styles -->
-    <link rel="stylesheet" href="styles/styles.css">
 
     <!-- Alpine JS  -->
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- CSS Styles -->
+    <link rel="stylesheet" href="styles/styles.css">
 
     <!-- Favicon -->
     <link rel="icon" href="assets/favicon.ico">
@@ -45,10 +50,10 @@
     <!-- Navbar -->
     <div class="header-nav">
         <ul class="h-nav">
-            <li class="title"><a href="/"><h1>Trends Inc.</h1></a></li>
+            <li class="title"><a href="/"><h2>Trends Inc.</h2></a></li>
             <li><a href="#podcast"><img src="assets/voice.png" alt="Talking Heads Podcast"></a></li>
-            <li><a href="pages/newsletter.html"><img src="assets/rss-feed.png" alt="News Feed"></a></li>
-            <li><a href="pages/directory.html"><img src="assets/phone-book.png" alt="Directory"></a></li>
+            <li><a href="/pages/newsletter.html"><img src="assets/rss-feed.png" alt="News Feed"></a></li>
+            <li><a href="/pages/directory.html"><img src="assets/phone-book.png" alt="Directory"></a></li>
         </ul>
     </div>
 
@@ -74,8 +79,8 @@
         </div>
         <div class="about-links">
             <button @click="open = true">Login</button>
-            <button type="button"><a href="pages/directory.html">Directory</a></button>
-            <button type="button"><a href="pages/newsletter.html">Newsletter</a></button>
+            <button type="button"><a href="/pages/directory.html">Directory</a></button>
+            <button type="button"><a href="/pages/newsletter.html">Newsletter</a></button>
         </div>
     </section>
 
@@ -83,36 +88,45 @@
     <section id="services">
         <h2>Trends Family</h2>
         <div class="service-cards">
-            <a href="pages/foundation.html">
-                <div class="card">
-                    <div class="card-head">
-                        <img src="assets/careslogo.png" alt="Trends Cares Foundation">
-                    </div>
-                    <div class="card-foot">
-                        Trends Cares Foundation
-                    </div>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="card" style="width: 20rem;">
+                        <img src="assets/careslogo.png" class="card-img-top" style="height: 15rem;">
+                        <div class="card-body">
+                          <h5 class="card-title">Trends Cares Foundation</h5>
+                          <a href="pages/foundation.html" class="btn btn-secondary" style="margin: .25rem;">Visit Site</a>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card" style="width: 20rem;">
+                        <img src="assets/shoplogo.png" class="card-img-top" style="height: 15rem;">
+                        <div class="card-body">
+                          <h5 class="card-title">Trends GMC Barbershop</h5>
+                          <a href="pages/barbershop.html" class="btn btn-secondary" style="margin: .25rem;">Visit Site</a>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="card" style="width: 20rem;">
+                        <img src="assets/incncologo.png" class="card-img-top" style="height: 15rem;">
+                        <div class="card-body">
+                          <h5 class="card-title">Trends Inc. & Company</h5>
+                          <a href="pages/clothing.html" class="btn btn-secondary" style="margin: .25rem;">Visit Site</a>
+                        </div>
+                      </div>
+                  </div>
                 </div>
-            </a>
-            <a href="pages/barbershop.html">
-                <div class="card">
-                    <div class="card-head">
-                        <img src="assets/shoplogo.png" alt="Trends Cares Foundation">
-                    </div>
-                    <div class="card-foot">
-                        Trends GMC Barbershop
-                    </div>
-                </div>
-            </a>
-            <a href="pages/clothing.html">
-                <div class="card">
-                    <div class="card-head">
-                        <img src="assets/incncologo.png" alt="Trends Cares Foundation">
-                    </div>
-                    <div class="card-foot">
-                        Trends Inc. & Company
-                    </div>
-                </div>
-            </a>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </div>
     </section>
 
@@ -137,8 +151,8 @@
         </form>
         
             <ul>
-                <li>7080 N. Oak Trwy, Gladstone, MO</li>
                 <li>(913) 940-0437</li>
+                <li>7080 N. Oak Trwy, Gladstone</li>
             </ul>
         
     </section>
