Adjust Newsletter and Directory

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Modal  -->
 
-    <div  
+    <!-- <div  
          
          x-show="open"
          class="su-modal-bg"
@@ -45,15 +45,15 @@
                 <button class="button">Submit</button>
             </form>
         </div>
-    </div>
+    </div> -->
 
     <!-- Navbar -->
     <div class="header-nav">
         <ul class="h-nav">
             <li class="title"><a href="/"><h2>Trends Inc.</h2></a></li>
             <li><a href="#podcast"><img src="assets/voice.png" alt="Talking Heads Podcast"></a></li>
-            <li><a href="/pages/newsletter.html"><img src="assets/rss-feed.png" alt="News Feed"></a></li>
-            <li><a href="/pages/directory.html"><img src="assets/phone-book.png" alt="Directory"></a></li>
+            <li><a href="pages/newsletter.html"><img src="assets/rss-feed.png" alt="News Feed"></a></li>
+            <li><a href="pages/directory.html"><img src="assets/phone-book.png" alt="Directory"></a></li>
         </ul>
     </div>
 
@@ -78,7 +78,7 @@
               </p> 
         </div>
         <div class="about-links">
-            <button @click="open = true">Login</button>
+            <!-- <button @click="open = true">Login</button> -->
             <button type="button"><a href="/pages/directory.html">Directory</a></button>
             <button type="button"><a href="/pages/newsletter.html">Newsletter</a></button>
         </div>
