--- a/pages/barbershop.html
+++ b/pages/barbershop.html
@@ -44,19 +44,10 @@
     <!-- Booking -->
     <section id="booking">
         <h3>Quick Book</h3>
-        <form action="" >
-            <input type="text" placeholder="Name...">
-            <input type="tel" placeholder="Number...">
-            <input type="date" placeholder="Time...">
-            <label for="cuts">Choose a Cut:</label>
-            <select id="cuts" name="cuts">
-              <option value="cut">Hair Cut</option>
-              <option value="yCut">Kids Cut 10 & Under</option>
-              <option value="sCut">Cut & Shave</option>
-              <option value="gmc">The GMC</option>
-            </select>
-            <button type="submit">Request Time</button>
-        </form>
+        <!-- Calendly inline widget begin -->
+        <div class="calendly-inline-widget" data-url="https://calendly.com/s-crawengr" style="min-width:320px;height:630px;"></div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        <!-- Calendly inline widget end -->
     </section>
     
     <!-- Footer -->
