--- a/pages/directory.html
+++ b/pages/directory.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company Directory</title>
 
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <!-- CSS Styling  -->
     <link rel="stylesheet" href="../styles/styles.css">
+
+    
 </head>
 <body>
     <!-- Navbar -->
@@ -27,27 +33,40 @@
     <section class="register">
         <h4>Register Your Company</h4>
             <form action="">
-                <input type="text" name="company" id="company" placeholder="Company" />
+                <input type="text" name="company" id="company" placeholder="Company" required/>
                 <input type="text" name="site" id="site" placeholder="Website" />
-                <input type="tel" name="number" id="number" placeholder="Number" />
+                <input type="tel" name="number" id="number" placeholder="Number" required/>
                 <button type="submit">Register</button>
             </form>
     </section>
 
-    <section class="table">
-        <table>
-            <tr>
-                <th>Comapny</th>
-                <th>Website</th>
-                <th>Number</th>
-            </tr>
-            <tr>
-                <th>Trends Inc.</th>
-                <th>trendsinckck.com</th>
-                <th>(913) 940-0437</th>
-            </tr>
-        </table>
-    </section>
+        <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Company</th>
+                <th scope="col">Website</th>
+                <th scope="col">Number</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Trends Inc.</th>
+                <td><a href="../index.html">trendsinckck.com</a></td>
+                <td>913-940-0437</td>
+              </tr>
+              <tr>
+                <th scope="row">Design House eMans</th>
+                <td>#</td>
+                <td>832-542-5718</td>
+              </tr>
+              <tr>
+                <th scope="row">CMGPro Films</th>
+                <td><a href="https://cmgprofilms.com">cmgprofilms.com</a></td>
+                <td>832-267-8653</td>
+              </tr>
+            </tbody>
+          </table>
+
 
     <!-- Legal -->
     <footer id="legal">
