Remove slash from index links

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         </div>
         <div class="about-links">
             <!-- <button @click="open = true">Login</button> -->
-            <button type="button"><a href="/pages/directory.html">Directory</a></button>
-            <button type="button"><a href="/pages/newsletter.html">Newsletter</a></button>
+            <button type="button"><a href="pages/directory.html">Directory</a></button>
+            <button type="button"><a href="pages/newsletter.html">Newsletter</a></button>
         </div>
     </section>
 
