Add About Descriptions

--- a/pages/barbershop.html
+++ b/pages/barbershop.html
@@ -36,9 +36,9 @@
     <!-- About -->
     <section id="about-family">
         <h3>About Trends GMC Barbershop</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima obcaecati ut, adipisci harum quibusdam
-            facilis commodi numquam expedita debitis sunt voluptatem optio culpa neque totam esse quisquam nisi odit
-            deleniti.</p>
+        <p>Grown Man Cuts. Trends GMC Barbershop is a family-orientated shop, providing a brotherhood between the barber and customer.
+            Come to this shop not only to look good, but to engage in real conversation, that'll have feel good as well.
+        </p>
     </section>
 
     <!-- Booking -->
