--- a/pages/clothing.html
+++ b/pages/clothing.html
@@ -42,9 +42,9 @@
     <!-- About -->
     <section id="about-family">
         <h3>About Trends Inc. & Company</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima obcaecati ut, adipisci harum quibusdam
-            facilis commodi numquam expedita debitis sunt voluptatem optio culpa neque totam esse quisquam nisi odit
-            deleniti.</p>
+        <p>Looking good doesn't have to come at a premium and we're here to buck that trend.
+          Shop Trends Inc. & Company for quality gear that you can be proud of for a price that won't break the bank.
+        </p>
     </section>
 
     <!-- Shop -->
