--- a/pages/foundation.html
+++ b/pages/foundation.html
@@ -37,14 +37,14 @@
 
     <!-- About -->
     <section id="about-family">
-        <h3>About Trends Cares Foundation</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima obcaecati ut, adipisci harum quibusdam
-            facilis commodi numquam expedita debitis sunt voluptatem optio culpa neque totam esse quisquam nisi odit
-            deleniti.</p>
+        <h3>About Trends Care Foundation</h3>
+        <p>Trends Care Foundation's goal is to help the children of bereaved parents financially with moral support and guidance.
+            Our mission is to help them with growth and development by mentoring them throughout their adolescence.
+        </p>
     </section>
 
     <!-- Testimonials -->
-    <section class="testimony">
+    <section class="testimony" style="display: none;">
         <h3>Testimonies</h3>
         <div class="feature-cards flex">
             <div class="card-body">
@@ -74,14 +74,16 @@
 
     <!-- Donate -->
     <section id="donate">
-        <h3>How to Join</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis a deleniti debitis nulla ratione quo!
-            Laudantium ipsum consectetur, obcaecati velit molestiae dolores quisquam harum debitis assumenda architecto
-            praesentium, illo nobis!</p>
-        <div class="donate-links">
-            <button type="button">Join</button>
-            <button type="button">Give</button>
-        </div>
+        <h3>Join the Cause</h3>
+        <p>The foundation is always open to those ready to help. If that is you, don't hesitate to join us in our efforts.
+        </p>
+
+        <form action="" class="donate-join" style="display: flex; flex-direction: column; gap: .5rem;">
+            <input type="text" name="name" id="name" placeholder="Full Name" required>
+            <input type="tel" name="number" id="number" placeholder="Phone Number" required>
+            <input type="email" name="email" id="email" placeholder="Email Address" required>
+            <button type="submit" style="width: 50%; margin: 0 auto;">Join</button>
+        </form>
     </section>
 
     <!-- Footer -->
