--- a/pages/directory.html
+++ b/pages/directory.html
@@ -40,7 +40,7 @@
             </form>
     </section>
 
-        <table class="table table-hover">
+        <table class="table table-hover" style="font-size: smaller;">
             <thead>
               <tr>
                 <th scope="col">Company</th>
