--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <!-- Podcast -->
     <section id="podcast">
         <h3>Talking Heads Podcast</h3>
+        <p>Stayed tuned for the premiere of the Trends Inc. Podcast!</p>
         <div class="podcast-frame grid">
             <iframe src="" frameborder="0">Podcast Dropping Soon!</iframe>
         </div>
