--- a/pages/barbershop.html
+++ b/pages/barbershop.html
@@ -37,7 +37,7 @@
     <section id="about-family">
         <h3>About Trends GMC Barbershop</h3>
         <p>Grown Man Cuts. Trends GMC Barbershop is a family-orientated shop, providing a brotherhood between the barber and customer.
-            Come to this shop not only to look good, but to engage in real conversation, that'll have feel good as well.
+            Come to this shop not only to look good, but to engage in real conversation, that'll have you feeling good as well.
         </p>
     </section>
 
