Add to newsletter

--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -33,11 +33,27 @@
     <section class="news">
         <div class="card" style="width: 18rem;">
             <div class="card-body">
+              <h5 class="card-title">@MrTrendsInc Day Party Car & Bike Show</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Sunday, July 17, 2022</h6>
+              <h6 class="card-subtitle mb-2 text-muted">1pm - 5pm CST</h6>
+              <h6 class="card-subtitle mb-2 text-muted">Lofty Spaces | 816 Montgomery St. Dallas, TX</h6>
+              <h6 class="card-subtitle mb-2 text-muted">$25 All-Day Pass | $50 Day Pary & Barber Battle</h6>
+              <p class="card-text">Day party before the Barber Battle including a Car & Bike show. Hosted by Staci!</p>
+              <a href="http://www.bthtour.com/" class="card-link">Event Page</a>
+              <a href="https://www.eventbrite.ca/e/bth-tour-more-tickets-289984079187?aff=ebdssbdestsearch&keep_tld=1" class="card-link">Tickets</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
               <h5 class="card-title">Battle of the Talking Heads</h5>
               <h6 class="card-subtitle mb-2 text-muted">Sunday, July 17, 2022</h6>
+              <h6 class="card-subtitle mb-2 text-muted">6pm - 10pm CST</h6>
+              <h6 class="card-subtitle mb-2 text-muted">Lofty Spaces | 816 Montgomery St. Dallas, TX</h6>
+              <h6 class="card-subtitle mb-2 text-muted">$25 All-Day Pass | $50 Day Pary & Barber Battle</h6>
+
               <p class="card-text">The longest running barber battle in the Midwest is on tour. Come see the best in the game compete on stage
                 + showcases & more!!</p>
-              <a href="https://www.facebook.com/bthvsbmw/" class="card-link">Event Page</a>
+              <a href="http://www.bthtour.com/" class="card-link">Event Page</a>
               <a href="https://www.eventbrite.ca/e/bth-tour-more-tickets-289984079187?aff=ebdssbdestsearch&keep_tld=1" class="card-link">Tickets</a>
             </div>
         </div>
@@ -77,6 +93,7 @@
 
     .news {
         padding-top: 2rem;
+        display: flex;
     }
 
     .card {
@@ -87,5 +104,7 @@
     #legal {
         position: fixed;
         bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
     }
 </style>
