--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -94,6 +94,8 @@
     .news {
         padding-top: 2rem;
         display: flex;
+        flex-direction: column;
+        gap: 1rem;
     }
 
     .card {
